--- a/react-social-app/src/App.scss
+++ b/react-social-app/src/App.scss
@@ -7,18 +7,17 @@
 }
 
 .main {
-  margin: 0rem 3rem;
   &__wrapper {
+    font-family: "Montserrat", sans-serif;
     display: grid;
     grid-template-columns: 2fr 10fr;
-    grid-template-rows: 60px 1fr;
+    grid-template-rows: 10vh 80vh;
     grid-template-areas:
       "header header "
       "navbar profile ";
   }
   &__header {
     grid-area: header;
-    background-color: aqua;
   }
   &__navbar {
     grid-area: navbar;
@@ -28,4 +27,21 @@
     grid-area: profile;
     background-color: rgb(157, 219, 129);
   }
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+button,
+input {
+  outline: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+img {
+  max-width: 100%;
 }
