--- a/react-social-app/src/components/header/header.scss
+++ b/react-social-app/src/components/header/header.scss
@@ -1,10 +1,12 @@
+@use "../../scss/" as *;
+
 .header {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 0 5rem;
+  padding: 0 2rem;
   font-size: 24px;
-  background-color: #073948;
-  color: #fff;
+  background-color: $dark;
+  color: $white;
 }
