--- a/react-social-app/src/components/profile/profileInfo/profileInfo.scss
+++ b/react-social-app/src/components/profile/profileInfo/profileInfo.scss
@@ -5,7 +5,7 @@
     height: 100px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0px -300px;
+    background-position: 0px -28vw;
     margin-bottom: 2rem;
   }
   .profile__desc {
