--- a/react-social-app/src/components/users/userItem/userItem.scss
+++ b/react-social-app/src/components/users/userItem/userItem.scss
@@ -1,6 +1,7 @@
 @use '../../../scss/variables' as *;
 
 .userItem{
+    font-size: 13px;
     width: 80%;
     padding: .4rem 2rem;
     display: grid;
