--- a/react-social-app/src/components/users/users.scss
+++ b/react-social-app/src/components/users/users.scss
@@ -1,21 +1,37 @@
-@use '../../scss/variables' as *;
+@use "../../scss/variables" as *;
 
-.users{
+.users {
   padding: 2rem 3rem;
 
-  .users__wrapper{
+  .users__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    .users__btn{
+    .users__btn {
       width: 30%;
       margin-top: 1rem;
-      padding: .4rem;
+      padding: 0.4rem;
       cursor: pointer;
       border: 1px solid $ligthGrey;
-      &:hover{
+      &:hover {
         background-color: $ligthGrey;
       }
     }
+  }
+}
+.users_buttons {
+  display: flex;
+  margin-bottom: 1rem;
+  button {
+    min-width: 30px;
+    border: 1px solid $ligthGrey;
+    padding: 0.2rem 0.4rem;
+    cursor: pointer;
+    &:hover {
+      background-color: $ligthGrey;
+    }
+  }
+  .selectedPage {
+    font-weight: bold;
   }
 }
