--- a/react-social-app/src/components/users/users.scss
+++ b/react-social-app/src/components/users/users.scss
@@ -21,7 +21,7 @@
 }
 .users_buttons {
   display: flex;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
   button {
     min-width: 30px;
     border: 1px solid $ligthGrey;
