--- a/react-social-app/src/components/profile/profileInfo/profileInfo.scss
+++ b/react-social-app/src/components/profile/profileInfo/profileInfo.scss
@@ -1,22 +1,40 @@
 .profileInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   .profile__bgimg {
     background-image: url("https://cdn.pixabay.com/photo/2017/08/10/00/07/nature-2616302_1280.jpg");
-    width: 100%;
     height: 100px;
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: 0px -28vw;
-    margin-bottom: 2rem;
   }
   .profile__desc {
-    display: flex;
     padding: 2rem;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10vh 10vh;
+    grid-gap: 2rem;
     align-items: center;
-    img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
+    justify-content: center;
+    grid-template-areas:
+      "img name "
+      "img status ";
+    .profile__img {
+      grid-area: img;
+      display: flex;
+      justify-content: center;
+      img {
+        max-height: 24vh;
+        border-radius: 10px;
+      }
+    }
+    .profile__name {
+      grid-area: name;
+      font-weight: 600;
+      display: flex;
+    }
+    .profile__status {
+      grid-area: status;
     }
   }
 }
