--- a/react-social-app/src/components/header/header.scss
+++ b/react-social-app/src/components/header/header.scss
@@ -5,8 +5,12 @@
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 3rem;
   font-size: 24px;
   background-color: $dark;
   color: $white;
+  justify-content: space-between;
+  .header__login {
+    font-size: 18px;
+  }
 }
