--- a/react-social-app/src/components/Login/login.scss
+++ b/react-social-app/src/components/Login/login.scss
@@ -14,14 +14,31 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      margin-bottom: 1rem;
-      width: 50%;
+      width: 80%;
+      margin-top: 2rem;
+      .login__form_text,
+      .login__form_password {
+        input {
+          width: 100%;
+        }
+      }
+      .login__form_checkbox {
+        input {
+          margin-right: 1rem;
+        }
+      }
       input {
         padding: 0.4rem 1rem;
+        font-size: 16px;
+      }
+      .login__form_errors {
+        min-height: 20px;
+        display: flex;
+        flex-direction: column;
       }
     }
     button {
-      width: 50%;
+      width: 100%;
       padding: 0.4rem 1rem;
       cursor: pointer;
       background-color: $white;
