--- a/react-social-app/src/components/header/header.scss
+++ b/react-social-app/src/components/header/header.scss
@@ -12,5 +12,18 @@
   justify-content: space-between;
   .header__login {
     font-size: 16px;
+    button {
+      padding: 0.2rem 0.4rem;
+      background-color: $white;
+      border: 1px solid $dark;
+      cursor: pointer;
+      margin-left: 1rem;
+      border-radius: 3px;
+      &:hover {
+        background-color: $medium;
+        color: $white;
+        transition: all 0.15s ease-in;
+      }
+    }
   }
 }
