Edit profile info

--- a/react-social-app/src/components/profile/profileInfo/profileInfo.scss
+++ b/react-social-app/src/components/profile/profileInfo/profileInfo.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  .profile__bgimg {
+  font-size: 0.9rem;
+  .profile__bgImg {
     background-image: url("https://cdn.pixabay.com/photo/2017/08/10/00/07/nature-2616302_1280.jpg");
     height: 100px;
     background-size: cover;
@@ -12,13 +13,11 @@
     padding: 2rem 4rem;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 10vh 10vh;
     grid-gap: 2rem;
-    align-items: center;
     justify-content: center;
     grid-template-areas:
-      "img name "
-      "img status ";
+      "img info "
+      "img info ";
     .profile__img {
       grid-area: img;
       display: grid;
@@ -30,14 +29,6 @@
         max-height: 20vh;
         border-radius: 10px;
       }
-    }
-    .profile__name {
-      grid-area: name;
-      font-weight: 600;
-      display: flex;
-    }
-    .profile__status {
-      grid-area: status;
     }
   }
 }
